<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnShowMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnShowMsgCaption"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSetMessage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSetMessage1Caption"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSetMessage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSetMessage2Caption"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSetMessage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSetMessage3Caption"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/btnShowActivity02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnShowActivity02Caption"
        android:textAllCaps="false" />
</LinearLayout>
